--- a/package.json
+++ b/package.json
@@ -11,11 +11,15 @@
   },
   "dependencies": {
     "@ant-design/v5-patch-for-react-19": "^1.0.3",
+    "@hookform/resolvers": "^5.0.1",
     "antd": "^5.25.1",
+    "dayjs": "^1.11.13",
     "react": "18",
     "react-dom": "18",
-    "react-hook-form": "^7.56.3",
-    "react-input-mask": "^2.0.4"
+    "react-hook-form": "^7.56.4",
+    "react-input-mask": "^2.0.4",
+    "react-phone-number-input": "^3.4.12",
+    "zod": "^3.24.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
